Pending changes exported from your codespace

--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,56 @@
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <div id="#app">
-
+    <div id="app">
+      <div id="draw-call"></div>
+      <div id="health">
+        <div id="health-container">
+          <div id="health-number"></div>
+          <div id="health-bar"></div>
+        </div>
+        <div id="health-icon"></div>
+      </div>
+      <div id="mana">
+        <div id="mana-icon"></div>
+        <div id="mana-container">
+          <div id="mana-number"></div>
+          <div id="mana-bar"></div>
+        </div>
+      </div>
+      <div id="skill">
+        <div id="slot1">
+          <div class="num">1</div>
+          <div class="content"></div>
+        </div>
+        <div id="slot2">
+          <div class="num">2</div>
+          <div class="content"></div>
+        </div>
+        <div id="slot3">
+          <div class="num">3</div>
+          <div class="content"></div>
+        </div>
+        <div id="slot4">
+          <div class="num">4</div>
+          <div class="content"></div>
+        </div>
+        <div id="slot5">
+          <div class="num">5</div>
+          <div class="content"></div>
+        </div>
+        <div id="slot6">
+          <div class="num">6</div>
+          <div class="content"></div>
+        </div>
+        <div id="slot7">
+          <div class="num">7</div>
+          <div class="content"></div>
+        </div>
+        <div id="slot8">
+          <div class="num">8</div>
+          <div class="content"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
